--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="no">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -8,28 +8,26 @@
 </head>
 <body>
     <div class="uichallenge">
-        <!-- Welcome Screen -->
         <div id="welcome-screen" class="header">
             <div class="header_content">
                 <div class="header_text">
                     <h1 id="ask123-tegn-til-tale" class="header_text_title">ASK123 Tegn til Tale</h1>
-                    <p>Lær alternativ og supplerende kommunikasjon gjennom spill!</p>
+                    <p class="header_text_intro">Lær alternativ og supplerende kommunikasjon gjennom spill!</p>
                 </div>
                 <div class="header_cta">
                     <button id="start-game" class="btn">Start Spillet</button>
                     <button id="start-flashcard" class="btn">Flashkort Modus</button>
+                    <button id="view-progress" class="btn">Se Progresjon</button>
                 </div>
             </div>
         </div>
 
-        <!-- Category Menu -->
         <div id="category-menu" class="menu" style="display: none;">
             <h3 id="velg-en-kategori" class="menu_title">Velg en Kategori</h3>
-            <ul id="category-buttons" class="list_item_wrapper"></ul>
+            <ul id="category-buttons"></ul>
             <button id="back-to-main" class="btn back-btn">Tilbake til hovedmeny</button>
         </div>
 
-        <!-- Game Screen -->
         <div id="game-screen" style="display: none;">
             <button id="back-to-categories-game" class="btn back-btn">Tilbake til kategorier</button>
             <h2 id="category-title"></h2>
@@ -37,11 +35,14 @@
                 <img id="current-image" alt="ASK Tegn">
             </div>
             <div id="answer-section">
-                <input type="text" id="answer-input" placeholder="Svar">
+                <input type="text" id="answer-input" placeholder="Skriv inn svaret">
                 <button id="submit-answer" class="btn">Submit</button>
             </div>
             <div id="timer-display">
                 Tid igjen: <span id="timer">15</span> sekunder
+            </div>
+            <div id="time-progress-bar">
+                <div id="time-progress-fill"></div>
             </div>
             <div id="feedback-container">
                 <div id="feedback"></div>
@@ -57,16 +58,14 @@
             </div>
         </div>
 
-        <!-- Results Screen -->
         <div id="results-screen" style="display: none;">
             <h2>Spillet er ferdig!</h2>
             <p id="final-score"></p>
             <p id="final-streak"></p>
             <button id="play-again" class="btn">Spill igjen</button>
-            <button id="back-to-categories-from-results" class="btn back-btn">Tilbake til kategorier</button>
+            <button id="back-to-categories-from-results" class="btn">Tilbake til kategorier</button>
         </div>
 
-        <!-- Flashcard Screen -->
         <div id="flashcard-screen" style="display: none;">
             <button id="back-to-main-from-flashcard" class="btn back-btn">Tilbake til hovedmeny</button>
             <h2>Flashkort Modus</h2>
@@ -77,8 +76,18 @@
             <button id="show-answer" class="btn">Vis Svar</button>
             <button id="next-flashcard" class="btn" style="display: none;">Neste</button>
         </div>
+
+        <div id="progress-screen" style="display: none;">
+            <button id="back-to-main-from-progress" class="btn back-btn">Tilbake til hovedmeny</button>
+            <h2>Din Progresjon</h2>
+            <div id="progress-details">
+                <!-- Progress details will be populated here -->
+            </div>
+            <canvas id="learning-curve-chart" width="400" height="200"></canvas>
+        </div>
     </div>
 
+    <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
     <script src="ask_game.js"></script>
 </body>
 </html>
